# graphite

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  conftest.py  constraints.txt  pyproject.toml  ruff.toml
backend/apps/accounts/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: exceptions.py  health.py  middleware.py  models.py  pagination.py
backend/apps/documents/: admin.py  api.py  blob_storage.py  chunkers.py  models.py  parsers.py  schemas.py  services.py  tasks.py
backend/apps/documents/migrations/: 0001_initial.py  0002_document_blob_fields.py
backend/apps/knowledge_graph/: admin.py  api.py  apps.py  extractors.py  models.py  neo4j_client.py  schemas.py  services.py  tasks.py  visualization.py
backend/apps/knowledge_graph/migrations/: 0001_initial.py
backend/apps/retrieval/: admin.py  api.py  apps.py  embeddings.py  models.py  schemas.py  services.py
backend/apps/retrieval/llm/: base.py  cerebras.py  factory.py  groq.py  openrouter.py
backend/apps/retrieval/migrations/: 0001_initial.py
backend/apps/retrieval/pipelines/: base.py  graph_rag.py  plain_rag.py
backend/apps/retrieval/tools/: base.py  (+4 more)
backend/apps/websockets/: apps.py  consumers.py  events.py  middleware.py  routing.py
backend/config/: api.py  asgi.py  celery.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/scripts/: create_neo4j_indexes.py  seed_data.py  wait_for_services.py
(+83 files in other folders)
